--- a/BlogGastronomia/css/app.css
+++ b/BlogGastronomia/css/app.css
@@ -1,5 +1,40 @@
 
-
-.grid-container{
-	background-color: rgb(90%,90%,90%, .2);
+body{
+	 background: url("../imagenes/fodo.jpg") no-repeat  fixed center;
+	 background-size:cover ; 
 }
+.menu li {
+	border: solid 1px #258dad;
+	
+}
+.menu li:hover{
+	background-color: #258dad;
+	color: #fff; 
+
+}
+.menu li:hover a{
+	color: #fff; 
+	font-weight: bold;
+}
+h2, h3,h4{
+	color: #c60f13 ;
+}
+.seccion {
+	background: #fce623 ;
+	margin-bottom: 0.5em;
+	margin-top: 0.5em;
+	padding-top: 0.5em;
+
+}
+
+.trasparente:before{
+	
+	background: #789466;	
+	content:"";
+	display: block;
+}
+
+
+
+
+
