--- a/BlogGastronomia/css/app.css
+++ b/BlogGastronomia/css/app.css
@@ -1,4 +1,5 @@
 
+
 body{
 	 background: url("../imagenes/fodo.jpg") no-repeat  fixed center;
 	 background-size:cover ; 
@@ -6,6 +7,7 @@ body{
 .menu li {
 	border: solid 1px #258dad;
 	
+}
 }
 .menu li:hover{
 	background-color: #258dad;
@@ -16,22 +18,33 @@ body{
 	color: #fff; 
 	font-weight: bold;
 }
-h2, h3,h4{
+h2, h3,h4 ,a{
 	color: #c60f13 ;
 }
 .seccion {
-	background: #fce623 ;
+	background: #efc323 ;
 	margin-bottom: 0.5em;
 	margin-top: 0.5em;
 	padding-top: 0.5em;
 
 }
 
-.trasparente:before{
-	
-	background: #789466;	
-	content:"";
+.trasparencia:after{
+	position: absolute;
 	display: block;
+	content: "";
+	margin: auto;
+	width: 80%;
+	left: 10%;
+	height: 350%;
+	min-height: 100%;
+	background-color : black;
+	z-index: -1;
+	opacity: 0.5;
+	top:0;
+	
+
+
 }
 
 
