--- a/BlogTurismo/css/app.css
+++ b/BlogTurismo/css/app.css
@@ -1,4 +1,4 @@
 body{
-	background: url("../imagenes/fondo.jpg") center fixed ;
+	background: url(../imagenes/fondo.jpg) center fixed;
 	background-size: cover;
 }
